init-container.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: init-container
  name: init-container
spec:
  volumes:
  - name: content
    emptyDir: {} 
  containers:
  - name: nginx-init
    image: nginx
    ports:
    - containerPort: 80
    volumeMounts: 
    - name: content
      mountPath: /user/share/nginx/html
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
