nginx-sec.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-sec
  name: nginx-sec
spec:
  containers:
  - image: nginx
    name: nginx-sec
    resources: {}
    volumeMounts:
    - name: secret-name
      readOnly: true
      mountPath: /etc/foo
  volumes:
  - name: secret-name
    secret:
      secretName: credentials
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
