nginx-vol1.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-vol1
  name: nginx-vol1
spec:
  securityContext:
    runAsUser: 101
  containers:
  - image: nginx
    name: nginx-vol1
    resources: {}
    volumeMounts:
    - name: con-vol
      mountPath: /etc/lala
  volumes:
    - name: con-vol
      configMap:
        name: cmvolume
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
