pod-busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod-busybox
  name: pod-busybox
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - while true;do echo $(date); sleep 10; done;
    image: busybox
    name: pod-busybox
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
