pod-emptydir.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod-emptydir
  name: pod-emptydir
spec:
  volumes:
  - name: logs-vol
    emptyDir: {}
  containers:
  - image: nginx
    name: pod-emptydir
    resources: {}
    volumeMounts:
    - name: logs-vol
      mountPath: /var/logs
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
