pod-multiple-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod-multiple-nginx
  name: pod-multiple-nginx
spec:
  containers:
  - image: nginx
    name: container1
    resources: {}
  - image: tomcat
    name: container2
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
