pod-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod-nginx
  name: pod-nginx
spec:
  containers:
  - image: nginx
    name: pod-nginx
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
