pod-node-sel.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod-node-sel
  name: pod-node-sel
spec:
  nodeSelector:
    accelerator: nvidia-tesla-p100
  containers:
  - image: nginx
    name: pod-node-sel
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
