pod-secret-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod-secret-volume
  name: pod-secret-volume
spec:
  containers:
  - image: nginx
    name: pod-secret-volume
    resources: {}
    volumeMounts:
    - name: secret-file
      mountPath: "/etc/secret"
      readOnly: true
  volumes:
  - name: secret-file
    secret:
      secretName: secret-file
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
