pod-with-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod-with-configmap
  name: pod-with-configmap
spec:
  containers:
  - image: nginx
    name: pod-with-configmap
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
