pod-with-limits.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod-with-limits
  name: pod-with-limits
spec:
  containers:
  - image: nginx
    name: pod-with-limits
    resources:
      requests:
        memory: "50Mi"
        cpu: "250m" 
      limits:
        memory: "75Mi"
        cpu: "300m"
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
