pod-with-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod-with-secret
  name: pod-with-secret
spec:
  containers:
  - image: nginx
    name: pod-with-secret
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
