foo-serv.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: foo
  name: foo-serv
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: foo
  type: ClusterIP
status:
  loadBalancer: {}
