nginx-serv-pod.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: nginx-serv-pod
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx-serv-pod
status:
  loadBalancer: {}
---
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-serv-pod
  name: nginx-serv-pod
spec:
  containers:
  - image: nginx
    name: nginx-serv-pod
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
