webapp-srv.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: webapp-srv
  name: webapp-srv
spec:
  ports:
  - name: 8080-80
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: webapp
  type: ClusterIP
status:
  loadBalancer: {}
